# yaini

./: CMakeLists.txt  flake.nix  yaini-config.cmake.in
include/yaini/: builder.hpp  ini_builder.hpp  ini_parser.hpp  ini_schema.hpp  ini_schema_builder.hpp  parser.hpp  schema.hpp  schema_builder.hpp
src/: ini_parser.cpp  ini_schema.cpp  ini_schema_builder.cpp  parser.cpp  schema.cpp  schema_builder.cpp
test/: ini_parser_gtest.cpp
